--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Cooking Healthy Code
+email: jeff.durand@musicxray.com
+description: >
+  This blog is about my three passions in life: Food, Health & Fitness, and writing great software.  If you are into the same stuff, then please feel free to leave a comment or two.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://johnnyiller.github.io" # the base hostname & protocol for your site
+github_username:  johnnyiller
 
 # Build settings
 markdown: kramdown
