--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Cooking Healthy Code
-email: jeff.durand@musicxray.com
+email: jeff.durand@gmail.com
 description: >
   This blog is about my three passions in life: Food, Health & Fitness, and writing great software.  If you are into the same stuff, then please feel free to leave a comment or two.
 baseurl: "" # the subpath of your site, e.g. /blog/
