small change to config

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: jeff.durand@gmail.com
 description: >
   This blog is about my three passions in life: Food, Health & Fitness, and writing great software.  If you are into the same stuff, then please feel free to leave a comment or two.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://johnnyiller.github.io" # the base hostname & protocol for your site
+url: "http://www.jefferydurand.com" # the base hostname & protocol for your site
 github_username:  johnnyiller
 linked_in_username: jeffdurand
 
